Add top-level pointers to multicloud-emco
Signed-off-by: Todd Malsbary <todd.malsbary@intel.com>

--- a/kubernetes/multicloud/requirements.yaml
+++ b/kubernetes/multicloud/requirements.yaml
@@ -24,6 +24,10 @@ dependencies:
     version: ~7.x-0
     repository: 'file://components/multicloud-azure'
     condition: multicloud-azure.enabled
+  - name: multicloud-emco
+    version: ~7.x-0
+    repository: 'file://components/multicloud-emco'
+    condition: multicloud-emco.enabled
   - name: multicloud-fcaps
     version: ~7.x-0
     repository: 'file://components/multicloud-fcaps'
