--- a/kubernetes/multicloud/values.yaml
+++ b/kubernetes/multicloud/values.yaml
@@ -35,6 +35,8 @@ istioSidecar: true
 
 multicloud-azure:
   enabled: true
+multicloud-emco:
+  enabled: true
 multicloud-fcaps:
   enabled: true
 multicloud-k8s:
