Point multicloud-emco images to docker.io/integratedcloudnative
Signed-off-by: root <root@multicloud-k8s>

--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-dtc/values.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-dtc/values.yaml
@@ -11,8 +11,8 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-repository:
-image: emco-dtc:latest
+repository: docker.io/integratedcloudnative
+image: emco-dtc:openness-20.12
 pullPolicy: Always
 command: "./dtc"
 args: ""
