--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-dcm/values.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-dcm/values.yaml
@@ -11,8 +11,8 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-repository:
-image: emco-dcm:latest
+repository: docker.io/integratedcloudnative
+image: emco-dcm:openness-20.12
 pullPolicy: Always
 command: "./dcm"
 args: ""
