--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-rsync/templates/service.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-rsync/templates/service.yaml
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright (c) 2020 Intel Corporation
 */}}
-{{- template "common.servicemco" . -}}
+{{- template "multicloud-emco.servicemco" . -}}
