--- a/kubernetes/multicloud/components/multicloud-emco/requirements.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/requirements.yaml
@@ -5,12 +5,12 @@ dependencies:
   - name: common
     version: ~7.x-0
     repository: '@local'
+  - name: etcd
+    version: ~7.x-0
+    repository: '@local'
   - name: multicloud-emco-common
     version: ~0.x-0
     repository: 'file://components/multicloud-emco-common'
-  - name: multicloud-emco-etcd
-    version: ~3.x-0
-    repository: 'file://components/multicloud-emco-etcd'
   - name: multicloud-emco-fluentd
     version: ~1.x-0
     repository: 'file://components/multicloud-emco-fluentd'
