--- a/kubernetes/common/fluentd/templates/clusterrole.yaml
+++ b/kubernetes/common/fluentd/templates/clusterrole.yaml
@@ -1,9 +1,7 @@
 {{- if and .Values.serviceAccount.create .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
-metadata:
-  name: {{ include "fluentd.fullname" . }}
-  labels: {{- include "fluentd.labels" . | nindent 4 }}
+metadata:  {{- include "common.resourceMetadata" . | nindent 2 }}
 rules:
   - apiGroups:
       - ""
