--- a/kubernetes/common/fluentd/templates/clusterrolebinding.yaml
+++ b/kubernetes/common/fluentd/templates/clusterrolebinding.yaml
@@ -1,13 +1,11 @@
 {{- if and .Values.serviceAccount.create .Values.rbac.create }}
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: {{ include "fluentd.fullname" . }}
-  labels: {{- include "fluentd.labels" . | nindent 4 }}
+metadata:  {{- include "common.resourceMetadata" . | nindent 2 }}
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
-  name: {{ template "fluentd.fullname" . }}
+  name: {{ include "common.fullname" . }}
 subjects:
   - kind: ServiceAccount
     name: {{ template "fluentd.serviceAccountName" . }}
