--- a/kubernetes/common/fluentd/templates/metrics-svc.yaml
+++ b/kubernetes/common/fluentd/templates/metrics-svc.yaml
@@ -1,10 +1,8 @@
 {{- if .Values.metrics.enabled }}
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ include "fluentd.fullname" . }}-metrics
-  labels: {{- include "fluentd.labels" . | nindent 4 }}
-  annotations: {{- include "fluentd.tplValue" (dict "value" .Values.metrics.service.annotations "context" $) | nindent 4 }}
+{{ $suffix := "metrics" -}}
+metadata:  {{- include "common.resourceMetadata" (dict "suffix" $suffix "annotations" .Values.metrics.service.annotations "dot" . ) | nindent 2 }}
 spec:
   type: {{ .Values.metrics.service.type }}
   {{- if and (eq .Values.metrics.service.type "LoadBalancer") .Values.metrics.service.loadBalancerIP }}
@@ -14,5 +12,5 @@ spec:
     - name: metrics
       port: {{ .Values.metrics.service.port }}
       targetPort: metrics
-  selector: {{- include "fluentd.matchLabels" . | nindent 4 }}
+  selector: {{- include "common.selectors" . | nindent 4 }}
 {{- end }}
