--- a/kubernetes/common/fluentd/templates/svc-headless.yaml
+++ b/kubernetes/common/fluentd/templates/svc-headless.yaml
@@ -1,10 +1,9 @@
 {{- if and .Values.aggregator.enabled .Values.aggregator.service.ports -}}
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ include "fluentd.fullname" . }}-headless
-  labels: {{- include "fluentd.labels" . | nindent 4 }}
-    app.kubernetes.io/component: aggregator
+{{ $suffix := "headless" -}}
+{{ $labels := (dict "app.kubernetes.io/component" "aggregator") -}}
+metadata:  {{- include "common.resourceMetadata" (dict "suffix" $suffix "labels" $labels "dot" . ) | nindent 2 }}
 spec:
   type: ClusterIP
   clusterIP: None
@@ -13,6 +12,5 @@ spec:
     - name: {{ $key }}
       {{ toYaml $value | nindent 6 }}
   {{- end }}
-  selector: {{- include "fluentd.matchLabels" . | nindent 4 }}
-    app.kubernetes.io/component: aggregator
+  selector: {{- include "common.matchLabels" (dict "matchLabels" $labels "dot" . ) | nindent 4 }}
 {{- end -}}
