--- a/kubernetes/common/fluentd/templates/servicemonitor.yaml
+++ b/kubernetes/common/fluentd/templates/servicemonitor.yaml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ include "fluentd.fullname" . }}
+  name: {{ include "common.fullname" . }}
   {{- if .Values.metrics.serviceMonitor.namespace }}
   namespace: {{ .Values.metrics.serviceMonitor.namespace }}
   {{- end }}
