fluentd: Use common.namespace
Signed-off-by: Todd Malsbary <todd.malsbary@intel.com>

--- a/kubernetes/common/fluentd/templates/clusterrolebinding.yaml
+++ b/kubernetes/common/fluentd/templates/clusterrolebinding.yaml
@@ -9,5 +9,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ template "fluentd.serviceAccountName" . }}
-    namespace: {{ .Release.Namespace }}
+    namespace: {{ include "common.namespace" . }}
 {{- end }}
