--- a/kubernetes/common/fluentd/templates/servicemonitor.yaml
+++ b/kubernetes/common/fluentd/templates/servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
   {{- if .Values.metrics.serviceMonitor.namespace }}
   namespace: {{ .Values.metrics.serviceMonitor.namespace }}
   {{- end }}
-  labels: {{- include "fluentd.labels" . | nindent 4 }}
+  labels: {{- include "common.labels" . | nindent 4 }}
     {{- range $key, $value := .Values.metrics.serviceMonitor.selector }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
