--- a/kubernetes/common/fluentd/templates/aggregator-statefulset.yaml
+++ b/kubernetes/common/fluentd/templates/aggregator-statefulset.yaml
@@ -18,7 +18,8 @@ spec:
         {{- include "common.tplValue" (dict "value" .Values.aggregator.podAnnotations "context" $) | nindent 8 }}
         {{- end }}
     spec:
-      {{- include "fluentd.imagePullSecrets" . | nindent 6 }}
+      imagePullSecrets:
+      - name: "{{ include "common.namespace" . }}-docker-registry-key"
       {{- if .Values.aggregator.securityContext.enabled }}
       securityContext:
         runAsUser: {{ .Values.aggregator.securityContext.runAsUser }}
@@ -35,8 +36,8 @@ spec:
       {{- end }}
       containers:
         - name: fluentd
-          image: {{ include "fluentd.image" . }}
-          imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
+          image: {{ include "repositoryGenerator.dockerHubRepository" . }}/{{ .Values.image }}
+          imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
           env:
             - name: FLUENTD_CONF
               value: {{ .Values.aggregator.configFile }}
