--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-gac/templates/configmap.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-gac/templates/configmap.yaml
@@ -5,13 +5,6 @@
 
 apiVersion: v1
 kind: ConfigMap
-metadata:
-  name: {{ include "common.fullname" . }}
-  namespace: {{ include "common.namespace" . }}
-  labels:
-    app: {{ include "common.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+metadata: {{- include "common.resourceMetadata" . | nindent 2 }}
 data:
 {{ tpl (.Files.Glob "resources/config/*").AsConfig . | indent 2 }}
