--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-ovnaction/templates/service.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-ovnaction/templates/service.yaml
@@ -4,14 +4,7 @@
 */}}
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ include "common.servicename" . }}
-  namespace: {{ include "common.namespace" . }}
-  labels:
-    app: {{ include "common.fullname" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+metadata: {{- include "common.resourceMetadata" . | nindent 2 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -33,6 +26,4 @@ spec:
     targetPort: {{ .Values.service.internalPort }}
     {{- end}}
     protocol: TCP
-  selector:
-    app: {{ include "common.name" . }}
-    release: {{ .Release.Name }}
+  selector: {{- include "common.matchLabels" . | nindent 4 }}
