multicloud-emco: Use common.repositoryGenerator
Signed-off-by: Todd Malsbary <todd.malsbary@intel.com>

--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-ovnaction/values.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-ovnaction/values.yaml
@@ -11,7 +11,7 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-repository: docker.io/integratedcloudnative
+repositoryOverride: docker.io/integratedcloudnative
 image: emco-ovn:openness-20.12
 pullPolicy: Always
 args: ""
