--- a/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-gac/values.yaml
+++ b/kubernetes/multicloud/components/multicloud-emco/components/multicloud-emco-gac/values.yaml
@@ -11,7 +11,7 @@ global:
 # Application configuration defaults.
 #################################################################
 # application image
-repository: docker.io/integratedcloudnative
+repositoryOverride: docker.io/integratedcloudnative
 image: emco-gac:openness-20.12
 pullPolicy: Always
 command: "./genericactioncontroller"
