--- a/kubernetes/common/fluentd/Chart.yaml
+++ b/kubernetes/common/fluentd/Chart.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2020 Bitnami, Intel
+# Copyright 2021 Bitnami, Intel Corporation, Inc
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
